@@ -10,7 +10,9 @@ the name associated with the address to which a client connects. Made a small
 change to the documentation to make it clearer. tpop3d now obeys configure's
 --sysconfdir option. Improved the performance of the mailspool parser. Fixed a
 problem in the command parsing code which could cause problems with Eudora's
-command pipelining; thanks to Shin Zukeran for this fix.
+command pipelining; thanks to Shin Zukeran for this fix. Fixed a minor problem
+in the PAM code, thanks to Christian Nordmann, and also added facility to use
+auth-pam for authenticating users who have no UNIX account.
 
 1.4.2
 
